# url-shortener

./: .gitignore  Cargo.toml  LICENSE  README.md  index.css  index.html  url.db
src/: db.rs  main.rs
