[package]
name = "url_shortener"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
derive_more = { version = "1.0", features = ["display", "error"] }
sqlx = { version = "0.8", features = [ "sqlite", "runtime-tokio", "tls-native-tls" ]  }
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0" 
uuid = { version = "1.2", features = ["v4"] }
dotenv = "0.15"
